# q-video-analysis-controller

./: .gitignore  CMakeLists.txt  README.md
VideoPlayer/: CMakeLists.txt  main.cpp  main.qml
ui/: CMakeLists.txt  main.cpp
